--- a/package.json
+++ b/package.json
@@ -110,5 +110,5 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint-plugin-react": "^7.28.0"
   },
-  "homepage": "https://aimedix.com"
+  "homepage": "https://virtualhospital.aimedis.io/sys-n-eval"
 }
