--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "webpack": "4.42.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=2879 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -111,5 +111,5 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint-plugin-react": "^7.28.0"
   },
-  "homepage": "https://aidoc.io/sys-n-eval"
+  "homepage": "https://virtualhospital.aidoc.io/sys-n-eval"
 }
